# email-newsletter-backend

./: .gitignore  Cargo.toml  README.md  run_tests.sh
entity/: Cargo.toml
entity/src/: article.rs  mod.rs  prelude.rs  subscription.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241130_145647_create_user_table.rs  m20250102_221835_article_table.rs  m20250208_132108_subscription_table.rs  main.rs
src/: main.rs
src/article/: article_handlers.rs  article_routes.rs  mod.rs
src/auth/: auth_handlers.rs  auth_routes.rs  mod.rs
src/email/: email_service.rs  mod.rs
src/health/: health_handler.rs  health_routes.rs  mod.rs
src/middlewares/: auth_middlewares.rs  mod.rs
src/routes/: article_routes.rs  auth_routes.rs  home_routes.rs  mod.rs  subscription_routes.rs  user_routes.rs
src/routes/handlers/: article_handlers.rs  auth_handlers.rs  home_handler.rs  mod.rs  subscription_handlers.rs  user_handlers.rs
src/routes/middlewares/: auth_middlewares.rs
src/subscription/: mod.rs  subscription_handlers.rs  subscription_routes.rs
src/templates/: email_template.html
src/testcases/: article_handlers_test.rs  auth_handler_test.rs  mod.rs  subscription_handlers_test.rs  user_handlers_test.rs
src/user/: mod.rs  user_handlers.rs  user_routes.rs
src/utils/: api_response.rs  app_state.rs  contants.rs  email.rs  jwt.rs  main_error.rs  mod.rs
